Archive2/b6/0c05a5ca5ac030/output
main.cpp:8:30: error: variadic templates are a C++11 extension [-Werror,-Wc++11-extensions]
template<typename T, typename... Targs>
                             ^
main.cpp:25:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
2 errors generated.
